# spreadsheethurts

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
src/wizard/: __init__.py  base.py  batch_validator.py  cell.py  classifier.py  feature.py  sheet.py
src/wizard/formula/: __init__.py  base.py  identity.py
src/wizard/software/: __init__.py  base.py  calc.py  excel.py  gsheet.py
src/wizard/store/: database.py  models.py
src/wizard/token/: __init__.py  alphabet.py  base.py  digit.py  empty.py  special.py  tokenizer.py  whitespace.py
src/wizard/typ/: __init__.py  bool.py  number.py  text.py
src/wizard/utils/: __init__.py  decorator.py  ezodf.py  logger.py  misc.py  pool.py  pprint.py  regex.py
tests/: __init__.py  conftest.py  test_classifier.py  test_feature.py  test_sheet.py
tests/app/rule/: conftest.py  test_decisions.py  test_rule.py
tests/features/calc/: test_calc_examples.py
tests/features/common/: test_pattern.py
tests/features/excel/: test_excel_examples.py
tests/features/gsheet/: test_gsheel_examples.py
tests/mutator/: test_mutator_base.py  test_special_distorter.py
tests/software/: test_calc.py  test_excel.py  test_gsheet.py
tests/store/: test_database.py
tests/token/: conftest.py  test_alphabet.py  test_digit.py  test_space.py  test_special.py  test_token_base.py  test_tokenizer.py
tests/typ/: test_bool.py  test_discard_weird.py  test_number.py  test_text.py
tests/typ/datetime/: test_exceldatetime.py  test_gregoriandatetime.py  test_gsheetdatetime.py
(+80 files in other folders)
