[project]
name = "wizard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "a2wsgi>=1.10.10",
    "appscript>=1.3.0;sys_platform == 'darwin'",
    "backoff>=2.2.1",
    "convertdate>=2.4.0",
    "ezodf>=0.3.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.166.0",
    "gspread-asyncio>=2.0.0",
    "openai>=1.90.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyexcel-ods3>=0.6.1",
    "pyfunctional>=1.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.1.0",
    "rich>=14.0.0",
    "seaborn>=0.13.2",
    "socksio>=1.0.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy-utils>=0.41.2",
    "typer>=0.15.2",
    "uvicorn>=0.34.1",
    "xlsxwriter>=3.2.2",
]

[dependency-groups]
dev = [
    "pytest-repeat>=0.9.4",
    "pytest>=8.3.5",
    "ipdb>=0.13.13",
    "graphviz>=0.20.3",
    "fakeredis>=2.29.0",
    "pytest-postgresql[docker]>=7.0.2",
    "pytest-docker>=3.2.2",
    "psycopg[binary]>=3.2.9",
    "psycopg2-binary>=2.9.10",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "itables>=2.4.2",
    "dspy>=2.6.27",
]

[tool.ruff]
# allow star imports and referencing variables from them
# allow lambda functions to be used as function objects
ignore = ["F403", "F405", "E731"]
